# vvengine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
src/: app.cpp  app.h  main.cpp  observer.h
src/framework/: base_types.h  c_vector.cpp  c_vector.h
src/gui/: gui.cpp  gui.h
src/gui/imgui/: imconfig.h  imgui_impl_opengl3.cpp
src/input_system/: input_system.cpp  input_system.h
src/os/: window.cpp  window.h
src/render/: glew.hpp  glfw.hpp  render.cpp  render.h
